# Copyright © 2017 Bart Massey

# This work is made available under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "kheap"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dependencies]
rand = "0"
pcg_rand = "0.7"

[[bin]]
name = "kheap"
path = "kheap.rs"
